# FastAPI-Boilerplate-Pro

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/core/: settings.py
