[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["F77-code <stanis1av.b0706@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.scripts]
start = "fastapi_app.main:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
